--- a/styles.css
+++ b/styles.css
@@ -6,3 +6,20 @@ body {
   margin: 0;
   background-color: #333;
 }
+
+.paddle {
+  position: absolute;
+  background-color: white;
+  width: 1vh;
+  height: 10vh;
+
+}
+
+.paddle.left {
+  left: 1vw;
+
+}
+
+.paddle.right {
+ right: 1vw;
+}
