--- a/styles.css
+++ b/styles.css
@@ -7,10 +7,19 @@ body {
   background-color: #333;
 }
 
+:root {
+  --hue: 200;
+  --saturation: 50%;
+  --foreground-color: hs1(var(--hue), (var(--saturation),) 75%);
+}
+
 .paddle {
+--position: 50;
+
   position: absolute;
-  background-color: white;
-  top: 50vh;
+  background-color: (var--(foreground-color));
+  top: calc(5var(--position) * 1vh);
+  transform: translate(-50%);
   width: 1vh;
   height: 10vh;
 
