--- a/styles.css
+++ b/styles.css
@@ -5,8 +5,8 @@
 :root {
   --hue: 200;
   --saturation: 50%;
-  --foreground-color: hs1(var(--hue), (var(--saturation),) 75%);
-  --background-color: hs1(var(--hue), (var(--saturation),) 20%);
+  --foreground-color: hsl(var(--hue), var(--saturation), 75%);
+  --background-color: hsl(var(--hue), var(--saturation), 20%);
 }
 
 body {
@@ -21,10 +21,9 @@ body {
   position: absolute;
   background-color: var(--foreground-color);
   top: calc(var(--position) * 1vh);
-  transform: translate(-50%);
+  transform: translateY(-50%);
   width: 1vh;
   height: 10vh;
-
 }
 
 .paddle.left {
