--- a/styles.css
+++ b/styles.css
@@ -34,3 +34,16 @@ body {
 .paddle.right {
  right: 1vw;
 }
+
+.ball {
+  --x: 50;
+  --y: 50;
+
+  position: absolute;
+  background-color: var(--foreground-color);
+  top: calc(var(--position) * 1vh);
+  transform: translateY(-50%);
+  width: 1vh;
+  height: 10vh;
+
+}
