score now more visable and centered on screen

--- a/styles.css
+++ b/styles.css
@@ -49,3 +49,10 @@ body {
   height: 2.5vh;
 
 }
+
+.score {
+  display: flex;
+  justify-content: center;
+  font-weight: bold;
+  font-size: 7vh;
+}
