half of the screen taken up by one score and other half of screen taken up by other score

--- a/styles.css
+++ b/styles.css
@@ -55,4 +55,11 @@ body {
   justify-content: center;
   font-weight: bold;
   font-size: 7vh;
+  color: var(--foreground-color);
+
+}
+
+.score > * {
+  flex-grow: 1;
+  flex-basis: 0;
 }
