spaced scores out

--- a/styles.css
+++ b/styles.css
@@ -62,4 +62,11 @@ body {
 .score > * {
   flex-grow: 1;
   flex-basis: 0;
+  padding: 0 2vh;
+  margin: 1vh 0;
+  opacity: .5;
+}
+
+.score > :first-child {
+  text-align: right;
 }
