--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,7 @@
+#game-container {
+  text-align: center;
+}
+
 #game-board {
   border: 3px solid;
 
@@ -6,4 +10,15 @@
 #score-text {
   font-family: "consolas", monospace;
   font-size: 100px;
+}
+
+#reset-btn {
+  font-family: "Permanent Marker", monospace;
+  font-size: 22px;
+  width: 100px;
+  height: 50px;
+  border: 4px solid;
+  border-radius: 15px;
+  cursor: pointer;
+
 }
